--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,13 @@
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="label_peers">PEERS</string>
+    <string name="connect_peer_button">CONNECT</string>
+    <string name="disconnect_peer_button">DISCONNECT</string>
+    <string name="empty_message">No devices found.</string>
+    <string name="label_me">ME</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="group_owner_text">Am I the Group Owner? </string>
+    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
+    <string name="empty" />
 </resources>
