--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="group_owner_text">Am I the Group Owner? </string>
     <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
     <string name="empty" />
+    <string name="txt_hint">Type Message</string>
+    <string name="btn_send">Send</string>
+    <string name="chat_button">CHAT</string>
 </resources>
